# Stellar-Surfers

./: CMakeLists.txt  README.md  images.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtcsettings.cmake
connect/: client.cpp  client.h  connectmanager.cpp  connectmanager.h  connectwindow.cpp  connectwindow.h  connectwindow.ui  controllerupdater.cpp  controllerupdater.h  glupdater.cpp  glupdater.h  parser.cpp  parser.h  remoteselector.cpp  remoteselector.h  server.cpp  server.h
game/: gamewindow.cpp  gamewindow.h  space.cpp  space.h
opengl/: gl.cpp  gl.h  openglwindow.cpp  openglwindow.h
play/: settings.cpp  settings.h  settingswindow.ui  setupgame.cpp  setupgame.h  setupwindow.ui
play/saves/: datasaver.cpp  datasaver.h  gamesave.cpp  gamesave.h  settingssave.cpp  settingssave.h  settingssaver.cpp  settingssaver.h
shaders/: asteroidShader.fs  asteroidShader.vs  death1.fs  explosionShader.fs  explosionShader.vs  laserShader.fs  laserShader.vs  normalMap.fs  perlin.fs  positionTexture.fs  positionTexture.vs  skyboxShader.fs  skyboxShader.vs  terrainShader.fs  terrainShader.vs  testShader.fs  testShader.vs  textureShader.vs  waterShader.fs  waterShader.vs
skybox/: skybox.cpp  skybox.h
terrain/: asteroidcluster.cpp  asteroidcluster.h  noisedpatch.cpp  noisedpatch.h  noisedpatchfactory.cpp  noisedpatchfactory.h  noisedterrain.cpp  noisedterrain.h  patch.cpp  patch.h  patchfactory.cpp  patchfactory.h  patchindices.cpp  patchindices.h  planet.cpp  planet.h  planetlayer.cpp  planetlayer.h  planetproperties.h  quadtreenode.cpp  quadtreenode.h  sphericalterrain.cpp  sphericalterrain.h  terrainface.cpp  terrainface.h  terrainpatch.cpp  terrainpatch.h  terraintype.cpp  terraintype.h  waterpatch.cpp  waterpatch.h  waterpatchfactory.cpp  waterpatchfactory.h
test/: trianglewindow.cpp  trianglewindow.h
utils/: camera.cpp  camera.h  collisionmanager.cpp  collisionmanager.h  colors.cpp  colors.h  consts.cpp  consts.h  explosion.cpp  explosion.h  explosionmanager.cpp  explosionmanager.h  frustum.h  laser.cpp  laser.h  lasermanager.cpp  lasermanager.h  layeredperlinnoise.cpp  layeredperlinnoise.h  model.cpp  model.h  noise.h  obj_loader.cpp  obj_loader.h  perlinnoise.cpp  perlinnoise.h  shader.cpp  shader.h  shadermanager.cpp  shadermanager.h
